Removing the custom cursor effect

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,10 @@
 /*-----------------------------------*\
   #CUSTOM PROPERTY
 \*-----------------------------------*/
-html {
+/* html {
   cursor: none;
   scroll-behavior: smooth;
-}
+} */
 
 :root {
 
