--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2156,7 +2156,7 @@ textarea.form-input::-webkit-resizer {
 }
 
 /* ---------------------------------------- Cursor ---------------------------------------- */
-.cursor {
+/* .cursor {
   position: fixed;
   top: 0;
   left: 0;
@@ -2205,23 +2205,20 @@ textarea.form-input::-webkit-resizer {
     transform: scale(0.8);
     opacity: 1;
     border-color: #FEC664;
-    /* Initial color */
   }
 
   50% {
     transform: scale(1.2);
     opacity: 0.5;
     border-color: orange;
-    /* Color change to orange */
   }
 
   100% {
     transform: scale(0.8);
     opacity: 1;
     border-color: #FEC664;
-    /* Back to the initial color */
   }
-}
+} */
 
 /* ---------------------------------------- Cursor ---------------------------------------- */
 
